--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hello world!</h1>
-    <h2>My project!</h2>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>myproject</title><link href=/static/css/app.40da7718317630655aab32fdf6a3944a.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.8b66af7308c27647d259.js></script><script type=text/javascript src=/static/js/vendor.cc02a291b2421d03b553.js></script><script type=text/javascript src=/static/js/app.bac2e4096bb981817f41.js></script></body></html>
